--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -26,6 +26,34 @@ body {
   padding: 1rem 0.5rem;
 }
 
+.center {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.player {
+  position: fixed;
+  left: 0;
+  height: 60px;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  background-color: lightgray;
+}
+
+.track {
+  margin: 20px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 section {
   width: 100%;
   max-width: 420px;
@@ -49,23 +77,11 @@ a, a:visited {
   color: #ffffff;
 }
 
-input[type="text"],
-input[type="password"],
-button,
-textarea {
+.input {
   font-family: 'Nunito', sans-serif;
   font-size: 22px;
   padding: 0.25rem;
   border-radius: 0.5rem;
-}
-
-label,
-button {
-  margin-top: 1rem;
-}
-
-button {
-  padding: 0.5rem;
 }
 
 .instructions {
@@ -111,4 +127,30 @@ button {
 
 .line {
   display: inline-block;
+}
+
+.flexGrow {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+
+.persistCheck {
+  font-size: 0.75rem;
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.persistCheck label {
+  margin: 0;
+}
+
+.checkbox {
+  height: 20px;
+  width: 20px;
+  margin: 0 5px 2px 2px;
 }
